--- a/analysis/markdown/DSR_NRR_Survival.Rmd
+++ b/analysis/markdown/DSR_NRR_Survival.Rmd
@@ -38,7 +38,18 @@ output:
     pandoc_args:
     - --lua-filter=../templates/scholarly-metadata.lua
     - --lua-filter=../templates/author-info-blocks.lua
-    - --lua-filter=../templates/pagebreak.lua  
+    - --lua-filter=../templates/pagebreak.lua
+  bookdown::word_document2:
+    fig_caption: yes
+    reference_docx: "../templates/template.docx"
+    number_sections: FALSE
+    toc: no
+    always_allow_html: true
+    fig_width: 6
+    pandoc_args:
+    - --lua-filter=../templates/scholarly-metadata.lua
+    - --lua-filter=../templates/author-info-blocks.lua
+    - --lua-filter=../templates/pagebreak.lua
 csl: "../templates/american-fisheries-society.csl"
 bibliography:
   - AckermanLibrary.bib
